--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ flask-cors==4.0.0
 numpy==2.0.2
 ultralytics==8.3.39
 Pillow==10.1.0
-opencv-python==4.10.0.84
+opencv-python-headless==4.8.1.78
 gunicorn==20.1.0
